Páginas atualizadas e criadas com responsividade

--- a/views/students/show.njk
+++ b/views/students/show.njk
@@ -18,7 +18,7 @@
                 <div>{{student.age}}</div>
             </div>
             
-            <div class="item">
+            <div class="item" id="email">
                 <div>{{create.titles[4]}}</div>
                 <div>{{student.email}}</div>
             </div>
@@ -34,7 +34,7 @@
             </div>
 
 
-            <div class="item" id="ultimateButtons">
+            <div id="ultimateButtons">
                 <div class="edit">
                     <a href="/students/{{student.id}}/edit" class="button">Editar</a>
                 </div>
