--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -37,6 +37,8 @@
             </tbody>
         </table>
 
+    <div class="newCreate">
         <a class="buttonCreate" href="/teachers/create">Novo</a>
+    </div>
     </div>
 {% endblock %}
