--- a/views/not-found.njk
+++ b/views/not-found.njk
@@ -6,34 +6,30 @@
 {% endblock %}
 
 {% block content %}
-        <div class="card">
+    <div class="card">
 
-            <div class="erro">
+        <div class="erronumber">
+            <span>{{errodata.number}}</span>
+        </div>
 
-                <div class="erronumber">
-                    <span>{{errodata.number}}</span>
+        <div class="card__image-container">
+
+            <div class="main">
+                <div class="img__card">
+                    <img src="/assets/{{errodata.number}}.svg" alt="Ícone do erro {{errodata.number}}">
                 </div>
 
-                <div class="card__image-container">
-
-                    <div class="main">
-                        <div class="img__card">
-                            <img src="/assets/{{errodata.number}}.svg" alt="Ícone do erro {{errodata.number}}">
-                        </div>
-
-                        <div class="card__info">
-                            <p>{{errodata.description}}</p>
-                        </div>
-                    </div>
-
+                <div class="card__info">
+                    <p>{{errodata.description}}</p>
                 </div>
-
-                <div class="card__about">
-                    <p>{{errodata.info}}</p>
-                    <p class="erro__number">{{errodata.number}}</p>
-                </div>
-
             </div>
 
         </div>
+
+        <div class="card__about">
+            <p>{{errodata.info}}</p>
+            <p>{{errodata.number}}</p>
+        </div>
+
+    </div>
 {% endblock %}
