--- a/views/students/index.njk
+++ b/views/students/index.njk
@@ -24,7 +24,7 @@
                             {{student.name}}
                         </td>
 
-                        <td class="email">{{student.email}}</td>
+                        <td class="email"><p>{{student.email}}</p></td>
 
                         <td> <span class="grades">{{student.grades}}</span></td>
 
@@ -33,8 +33,9 @@
                 {% endfor %}
             </tbody>
         </table>
-
-        <a class="buttonCreate" href="/students/create">Novo</a>
+        <div class="newCreate">
+            <a class="buttonCreate" href="/students/create">Novo</a>
+        </div>
     </div>
     <script src="/scripts/index.js"></script>
 {% endblock %}
