Readme sendo refeito

--- a/views/not-found.njk
+++ b/views/not-found.njk
@@ -6,8 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="card">
-
+    <main class="card">
         <div class="erronumber">
             <span>{{errodata.number}}</span>
         </div>
@@ -30,6 +29,5 @@
             <p>{{errodata.info}}</p>
             <p>{{errodata.number}}</p>
         </div>
-
-    </div>
+    </main>
 {% endblock %}
