--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -1,5 +1,9 @@
 {% extends "layout.njk" %}
 
+{% block title %}
+    <title>{{create.subtitle[2]}}</title>
+{% endblock %}
+
 {% block content %}
     <form class="card" method="POST" action="/students?_method=PUT">
         <section 
@@ -7,7 +11,7 @@
         style="background: url({{student.avatar_url}}) no-repeat center center / cover"></section>
         <section class="details">
 
-            <h3>Editar aluno</h3>
+            <h3>{{create.subtitle[2]}}</h3>
 
             {% include "students/fields.njk" %}
 
