--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
     <head>
-        <meta charset="UTF-8">
+       <meta charset="UTF-8">
        <link rel="icon" href="/assets/favicon.ico" type="image/x-icon"/>
        <link rel="stylesheet" href="/visuals/layout.css">
-       {% block head %}
-          <title>My Class List</title>
-          <link rel="stylesheet" href="/visuals/index.css"> 
+       <link rel="stylesheet" href="/visuals/index.css"> 
+       
+       {% block title %}
+          <title>My Teacher List</title>
        {% endblock %}
         <body>
             <header>
