--- a/views/students/create.njk
+++ b/views/students/create.njk
@@ -1,14 +1,18 @@
 {% extends "layout.njk" %}
 
+{% block title %}
+<title>{{create.subtitle[0]}}</title>    
+{% endblock %}
+
 {% block content %}
     <form class="card" method="post" action="/students">
         <section class="avatar" 
         style="background: url(https://source.unsplash.com/collection/628604/500x500) no-repeat center center / cover"></section>
         <section class="details">
 
-            <h3>{{create.subtitle}}</h3>
+            <h3>{{create.subtitle[0]}}</h3>
 
-    {% include "students/fields.njk" %}
+            {% include "students/fields.njk" %}
          </section>
     </form>
 {% endblock %}
