--- a/views/students/show.njk
+++ b/views/students/show.njk
@@ -1,12 +1,17 @@
 {% extends "layout.njk" %}
 
+{% block title %}
+    <title>{{student.name}}</title>
+{% endblock %}
+
+
 {% block content %}
     <div class="card">
         <section class="avatar" style="background: url({{student.avatar_url}}) no-repeat center center / cover"></section>
 
         <section class="details">
 
-            <h3>Detalhes</h3>
+            <h3>{{create.subtitle[1]}}</h3>
 
             <div class="item">
                 <div>{{create.titles[1]}}</div>
