--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -1,21 +1,22 @@
 {% extends "layout.njk" %}
 
+{% block title %}
+    <title>Editar Professor</title>
+{% endblock %}
+
 {% block content %}
     <form class="card" method="POST" action="/teachers?_method=PUT">
         <section 
-        class="avatar" 
-        style="background: url({{teacher.avatar_url}}) no-repeat center center / cover"></section>
+            class="avatar" 
+            style="background: url({{teacher.avatar_url}}) no-repeat center center / cover">
+        </section>
+        
         <section class="details">
-
-            <h3>Editar Professor</h3>
-
-            {% include "teachers/fields.njk" %}
-
-
+            <h3>{{create.subtitle[1]}}</h3>
+                {% include "teachers/fields.njk" %}
             <input type="hidden" name="id" value="{{teacher.id}}">
-
         </section>
     </form>
     
-        <script src="/scripts/create.js"></script>
+    <script src="/scripts/create.js"></script>
 {% endblock %}
