--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card table-index">
+    <main class="card table-index">
         {# tag para formar uma tabela #}
         <table>
             {# cabeçalho da tabela #}
@@ -36,9 +36,8 @@
                 {% endfor %}
             </tbody>
         </table>
-
-    <div class="newCreate">
-        <a class="buttonCreate" href="/teachers/create">Novo</a>
-    </div>
-    </div>
+            <div class="newCreate">
+                <a class="buttonCreate" href="/teachers/create">Novo</a>
+            </div>
+    </main>
 {% endblock %}
